tests/errors/construction/initializer-missing-value.fn
---
Description: Initializer field with name and colon but no value
Expected: FN1015
---

type Vector2
{
    x: f32
    y: f32
    init{}
}

type Program
{
    fn Main -> i32
    {
        var v = Vector2 { x: , y: 2.0 }
        return 0
    }
}
